syntax = "proto3";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

package proto;

// no check can this user append messages to this chat or delete and etc
service ChatService {
  rpc CreateChat(ChatWithUsers) returns (ChatID) {}
  rpc GetChat(Chat) returns (ChatID) {}
  rpc InviteToChat(UserInGroup) returns (Result) {}
  rpc LeaveChat(UserInGroup) returns (Result) {}

  rpc AppendMessage(Message) returns (MessageID) {}
  rpc AppendMessages(Messages) returns (MessagesID) {}
  rpc UpdateMessage(Message) returns (Result) {}
	rpc DeleteMessage(Message) returns (Result) {}
  rpc GetChatMessages(ChatID) returns (Messages) {}
}

message ChatID {
 int32 value = 1;
}


message MessageID {
 int32 value = 1;
}

message MessagesID {
 repeated MessageID values = 1;
}

message Result {
 bool done = 1;
}

enum Status {
    NO = 0;
    OBSERVER = 1;
    PLAYER = 2;
    ADMIN = 3;
  }

message User {
  int32 id = 1;
  string name = 2;
  string photo = 3;
  Status status = 4;
}

message Message {
  int32 id = 1;
  Message answer = 2;
  string text = 3;
  User from = 4;
  User to = 5;
  int32 chat_id = 6;
  google.protobuf.Timestamp time = 7;
  bool edited = 8;
}

message Messages {
  repeated Message messages = 1;
  int32 block_size = 2;
  int32 block_amount = 3;
  int32 block_number = 4;
}

message Chat {
  int32 id = 1;
  int32 type = 2;
  int32 type_id = 3;
  repeated Messages messages = 4;
}

message ChatWithUsers {
  int32 type = 1;
  int32 type_id = 2;
  repeated User users = 3;
}

message UserInGroup {
  User user = 1;
  Chat chat = 2;
}
